--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,17 @@ services:
       - POSTGRES_USER=smartFridge
       - POSTGRES_PASSWORD=password1234
       - POSTGRES_DB=smartFridge
+    ports:
+      - 5432:5432
     volumes:
       - database-data:/var/lib/postgresql/data/
+    command: postgres -c listen_addresses=*,localhost
+  admin:
+    image: adminer
+    restart: always
+    depends_on:
+      - database
+    ports:
+      - 8081:8080
 volumes:
   database-data:
