--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -16,10 +16,18 @@ spec:
         - name: CONTAINER_ENV_VAR
           value: maven
     - name: docker
-      image: docker:20.10.3-dind
+      image: docker:20.10.3
       command:
         - cat
       tty: true
       env:
         - name: CONTAINER_ENV_VAR
           value: docker
+      volumeMounts:
+        - mountPath: /var/run/docker.sock
+          name: docker-sock
+  volumes:
+    - hostPath:
+        path: /var/run/docker.sock
+        type: File
+      name: docker-sock
