--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,16 @@
 
 	<properties>
 		<java.version>14</java.version>
-		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 		<sonar.dependencyCheck.htmlReportPath>${project.build.directory}/dependency-check-report.html</sonar.dependencyCheck.htmlReportPath>
 		<sonar.dependencyCheck.jsonReportPath>${project.build.directory}/dependency-check-report.json</sonar.dependencyCheck.jsonReportPath>
-		<jacoco.version>0.8.3</jacoco.version>
+		<jacoco.version>0.8.6</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
 		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
-		<dependency-check-maven.version>6.0.3</dependency-check-maven.version>
+		<dependency-check-maven.version>6.0.5</dependency-check-maven.version>
 	</properties>
 
 	<dependencies>
