--- a/infrastructure/terraform/jenkins-values.yaml
+++ b/infrastructure/terraform/jenkins-values.yaml
@@ -1,11 +1,10 @@
---set controller.=
 controller:
   jenkinsUriPrefix: "/jenkins"
   jenkinsUrl: "https://dev.g2.myvirtualfridge.net/jenkins"
 
   additionalPlugins:
-    -gitlab-plugin 1.5.13
-    -gitlab-oauth 1.10
-    -gitlab-api 1.0.6
-    -gitlab-branch-source 1.5.4
-    -sonar 2.13
+    - gitlab-plugin:1.5.13
+    - gitlab-oauth:1.10
+    - gitlab-api:1.0.6
+    - gitlab-branch-source:1.5.4
+    - sonar:2.13
