Added health endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.liquibase.change-log=classpath:/db/database-schema.xml
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
 spring.jpa.properties.org.hibernate.envers.do_not_audit_optimistic_locking_field=false
 spring.liquibase.drop-first=false
+
+management.endpoint.shutdown.enabled=true
