--- a/infrastructure/helm/kubernetes-smartFridge-backend/values.yaml
+++ b/infrastructure/helm/kubernetes-smartFridge-backend/values.yaml
@@ -9,7 +9,7 @@ sonarqube:
 
 smartFridge:
   db:
-    dbName: smart-fridge
+    dbName: smartfridgeDbDev
     hostName: smart-fridge
   image:
     name: smart-fridge-backend
