changed health endpoint to /api added livenessProbe readinessProbe to deployment

--- a/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
+++ b/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
@@ -32,6 +32,24 @@ spec:
               value: "{{$dbSmartFridgeUsername}}"
             - name: SPRING_DATASOURCE_PASSWORD
               value: "{{$dbSmartFridgePassword}}"
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 8080
+              httpHeaders:
+                - name: Accept
+                    value: application/json
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: 8080
+              httpHeaders:
+                - name: Accept
+                    value: application/json
+            initialDelaySeconds: 10
+            periodSeconds: 5
           imagePullPolicy: "{{.Values.smartFridge.image.pullPolicy}}"
       imagePullSecrets:
         - name: registry-credentials
