--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=password1234
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.liquibase.change-log=classpath:/db/database-schema.xml
-
+management.endpoints.web.base-path=/api
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
 spring.jpa.properties.org.hibernate.envers.do_not_audit_optimistic_locking_field=false
 spring.liquibase.drop-first=false
