--- a/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
+++ b/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
@@ -50,6 +50,16 @@ spec:
                 value: application/json
             initialDelaySeconds: 10
             periodSeconds: 5
+          startupProbe:
+            httpGet:
+              path: /api/health
+              port: 8080
+              httpHeaders:
+              - name: Accept
+                value: application/json
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 10
           imagePullPolicy: "{{.Values.smartFridge.image.pullPolicy}}"
       imagePullSecrets:
         - name: registry-credentials
