Optimized imports. Added bulkhead pattern.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.org.hibernate.envers.do_not_audit_optimistic_locking_field
 spring.liquibase.drop-first=false
 
 management.endpoint.shutdown.enabled=true
+
+resilience4j.bulkhead.instances.recipeService.max-concurrent-calls=10
+resilience4j.bulkhead.instances.recipeService.max-wait-duration=2000ms
