--- a/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
+++ b/infrastructure/helm/kubernetes-smartFridge-backend/templates/smartFridge-deployment.yaml
@@ -19,6 +19,8 @@ spec:
     metadata:
       labels:
         app: smart-fridge-backend
+      annotations:
+        commithash: "{{.Values.smartFridgeFrontend.commithash}}"
     spec:
       containers:
         - name: smart-fridge-backend
