--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api/api-docs
+springdoc.swagger-ui.path=/api/swagger-ui
 springdoc.paths-to-match=/**
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
